# InspireFaceOnRK3588

./: CMakeLists.txt  README.md  add_face_to_database.cpp  camera_face_recognizer.cpp
include/inspirecv/: check.h  inspirecv.h  logging.h  time_spend.h  version.h
include/inspirecv/core/: color.h  define.h  image.h  point.h  rect.h  size.h  transform_matrix.h
